# routes/api.php
@@ -17,8 +17,17 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
-Route::middleware(['auth:api'])->group(function () {
-    Route::resource('cliente','ClienteController');
-    Route::resource('cliente.pedido','PedidoController');
-    Route::resource('pastel','PastelController');
-});
+
+
+Route::prefix('v1')->namespace('API\V1')
+    ->name('api.v1.')
+    ->group(function () {
+
+        Route::middleware(['auth:api'])->group(function () {
+        });
+
+        Route::resource('pastel', 'PastelController');
+        Route::resource('cliente', 'ClienteController');
+        Route::resource('cliente.pedido', 'PedidoController');
+    
+    });
